# langchain-prolog

./: .flake8  .gitignore  .isort.cfg  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE_NOTES.md  mypy.ini  pyproject.toml  run.sh
.github/workflows/: docs.yml  release.yml  tests.yml  update_rtd.yml
docs/: Makefile  annoucement.txt  conf.py  index.md  modules.rst  requirements.txt
docs/api/: langchain_prolog.rst  modules.rst
docs/source/: badges.md  home.md  runnable.md  swi-prolog.md  tool.md
examples/: family.pl  prolog_runnable.ipynb  prolog_tool.ipynb
examples/route_planner/: route_planner.ipynb  route_planner_google_colab.ipynb  routes.pl  test_routes.pl
examples/travel_agent/: travel_agent.ipynb
scripts/: bump_version.py  generate_readme.py  release.py  reset_version.sh  update_versions.py  version.py
src/langchain_prolog/: __version__.py  _prolog_init.py  exceptions.py  runnable.py  tool.py
tests/: test_async_runnable.py  test_prolog_init.py  test_runnable.py  test_tool.py
tests/test_scripts/: family.pl
util/: colab_setup.sh  setup_swiprolog.sh
